--- a/BusChecker/app/src/main/res/values/colors.xml
+++ b/BusChecker/app/src/main/res/values/colors.xml
@@ -6,5 +6,17 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="naranja1">#d96220</color>
+    <color name="naranja2">#f56733</color>
+    <color name="naranja3">#ffa500</color>
+    <color name="naranja4">#febd59</color>
+    <color name="naranja5">#f7ad7e</color>
+    <color name="naranja6">#f0bd9c</color>
+    <color name="blancoN">#e5e5c8</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
