--- a/BusChecker/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/BusChecker/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -30,7 +30,7 @@
         android:fontFamily="@font/alatsi"
         android:gravity="center"
         android:hint="Contraseña"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         android:textColor="@color/white"
         android:textColorHighlight="@color/white"
@@ -138,6 +138,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="leer"
         android:text="Ingresar"
         android:textColor="@color/naranja6"
         android:textColorHighlight="@color/naranja6"
