--- a/MyBus/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/MyBus/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -132,6 +132,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="leer"
         android:text="Ingresar"
         android:textColor="@color/purple_500"
         android:textColorHighlight="@color/purple_500"
